--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Alejandro Svyatkovskyy Kholyavka</title>
+  <title>Joan-René Mérou</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;700&display=swap" rel="stylesheet">
   <!-- Font Awesome CDN -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
@@ -89,6 +89,9 @@
     }
   </style>
 </head>
-<body>
-</body>
+
+    <h3 class="c1">
+      Joan-René Mérou's Personal Site
+    </h3>
+
 </html>
