Update index page with serif font

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Joan-René Mérou</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;700&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
   <style>
@@ -12,13 +11,13 @@
 
     body, html {
       height: 100%;
-      font-family: 'Inter', sans-serif;
+      font-family: 'Times New Roman', Times, serif;
       color: black;
       background: url('https://i.imgur.com/BDDn2AE.jpeg') no-repeat center center fixed;
       background-size: cover;
     }
 
-  header {
+    header {
       width: 100%;
       padding: 30px;
       display: flex;
@@ -67,26 +66,27 @@
       min-height: 100vh;
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: flex-start;
       align-items: center;
-      padding: 2rem;
+      padding-top: 150px;
+      padding-left: 2rem;
+      padding-right: 2rem;
       text-align: center;
-      background: rgba(0, 0, 0, 0.5); /* subtle dark overlay for readability */
     }
 
     h1 {
       font-size: 3rem;
-      margin-bottom: 1rem;
+      margin-bottom: 2rem;
+      color: white;
+      text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
     }
 
     .about {
       max-width: 800px;
-      font-size: 1.1rem;
+      font-size: 1.2rem;
       line-height: 1.6;
-      background: rgba(0, 0, 0, 0.6);
-      padding: 2rem;
-      border-radius: 10px;
-      margin-top: 2rem;
+      color: white;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
     }
 
     .socials {
@@ -128,7 +128,11 @@
     <h1>Welcome to Joan-René Mérou's Personal Website</h1>
     <div class="about">
       <p>
-        This is my website
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. 
+        Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. 
+        Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. 
+        Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. 
+        Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim.
       </p>
     </div>
   </div>
