Adds more links and update about

--- a/index.html
+++ b/index.html
@@ -128,16 +128,18 @@
     <h1>Welcome to Joan-René Mérou's Personal Website</h1>
     <div class="about">
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. 
-        Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. 
-        Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. 
-        Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. 
-        Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim.
+        Thanks for visiting my website! In here I am collecting cool things to
+        show to other people, such as my work in physics or my hobbies. Feel
+        free to send an email to joanrenemerou@gmail.com for anything you are
+        interested in.
       </p>
     </div>
   </div>
 
   <div class="socials">
+    <a href="mailto:joanrenemerou@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
+    <a href="https://orcid.org/0000-0002-5776-6643" title="ORCID"><i class="fab fa-orcid"></i></a>
+    <a href="https://www.instagram.com/joanrenemerou/" title="Instagram"><i class="fab fa-instagram"></i></a>
     <a href="https://github.com/joanrenemerou"><i class="fab fa-github"></i></a>
     <a href="https://www.linkedin.com/in/joan-ren%C3%A9-m%C3%A9rou-217578298/"><i class="fab fa-linkedin"></i></a>
   </div>
