--- a/about.html
+++ b/about.html
@@ -1,23 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Me</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About – Joan-René Mérou</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
   <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+
+    body, html {
+      height: 100%;
+      font-family: 'Times New Roman', Times, serif;
+      color: white;
+      background: url('https://i.imgur.com/BDDn2AE.jpeg') no-repeat center center fixed;
+      background-size: cover;
+    }
+
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(0, 0, 0, 0.55);
+      z-index: -1;
+    }
+
+    header {
+      width: 100%;
+      padding: 30px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+
+    .branding {
+      display: flex;
+      flex-direction: column;
+      font-weight: 400;
+      font-size: 1.3rem;
+    }
+
+    .branding .name {
+      font-size: 1.8rem;
+      font-weight: 700;
+    }
+
+    .branding .subtitle {
+      font-style: italic;
+      font-size: 1.2rem;
+    }
+
+    nav {
+      display: flex;
+      gap: 2rem;
+      font-weight: 700;
+      font-size: 1.3rem;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      transition: color 0.3s ease;
+    }
+
+    nav a.active {
+      color: #f39c12;
+      border-bottom: 2px solid #f39c12;
+      padding-bottom: 2px;
+    }
+
+    nav a:hover {
+      color: #f39c12;
+    }
+
+    .content {
+      max-width: 900px;
+      margin: 160px auto 80px;
+      padding: 2rem;
+      background-color: rgba(0, 0, 0, 0.65);
+      border-radius: 10px;
+      font-size: 1.3rem;
+      line-height: 1.8;
+    }
+
     h1 {
-      font-size: 2rem;
-      margin-bottom: 20px;
-      font-weight: 700;           /* Negrita */
+      font-size: 2.8rem;
+      margin-bottom: 1.5rem;
+      text-align: center;
+    }
+
+    .socials {
+      position: absolute;
+      bottom: 30px;
+      display: flex;
+      gap: 1.5rem;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+
+    .socials a {
+      color: white;
+      font-size: 1.9rem;
+      text-decoration: none;
+    }
+
+    .socials a:hover {
+      color: #f39c12;
     }
   </style>
 </head>
 <body>
 
-  <h1>About Me</h1>
-  <p>
-    This is a test
-  </p>
+  <header>
+    <div class="branding">
+      <div class="name">Joan-René Mérou</div>
+      <div class="subtitle">Personal Website</div>
+    </div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html" class="active">About</a>
+      <a href="#">Photography</a>
+      <a href="#">Physics</a>
+      <a href="#">Curriculum</a>
+    </nav>
+  </header>
+
+  <div class="content">
+    <h1>About Me</h1>
+    <p>
+      I am a third-year PhD student in physics working on continuous gravitational waves and detector characterization.
+    </p>
+    <p>
+      Outside academia, I enjoy photography, sports, etc.
+    </p>
+    <p>
+      This website is a place to collect and share my work, hobbies, and interests. Feel free to connect via email or through the social links.
+    </p>
+  </div>
+
+  <div class="socials">
+    <a href="mailto:joanrenemerou@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
+    <a href="https://orcid.org/0000-0002-5776-6643" title="ORCID"><i class="fab fa-orcid"></i></a>
+    <a href="https://www.instagram.com/joanrenemerou/" title="Instagram"><i class="fab fa-instagram"></i></a>
+    <a href="https://github.com/joanrenemerou"><i class="fab fa-github"></i></a>
+    <a href="https://www.linkedin.com/in/joan-ren%C3%A9-m%C3%A9rou-217578298/"><i class="fab fa-linkedin"></i></a>
+  </div>
+
 </body>
 </html>
