--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
       <div class="subtitle">Personal Website</div>
     </div>
     <nav>
-      <a href="#">About</a>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
       <a href="#">Photography</a>
       <a href="#">Physics</a>
       <a href="#">Curriculum</a>
