--- a/about.html
+++ b/about.html
@@ -22,8 +22,9 @@
       position: fixed;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background-color: rgba(0, 0, 0, 0.55);
+      background-color: rgba(0, 0, 0, 0.75);
       z-index: -1;
+      pointer-events: none;
     }
 
     header {
