--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
     body::before {
       content: "";
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.6); /* darker overlay */
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(0, 0, 0, 0.75);
       z-index: -1;
+      pointer-events: none;
     }
 
     header {
