Adds the physics link to the other two pages

--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="#">Photography</a>
-      <a href="#">Physics</a>
+      <a href="physics.html">Physics</a>
       <a href="#">Curriculum</a>
     </nav>
   </header>
