Update physics page

--- a/physics.html
+++ b/physics.html
@@ -22,7 +22,7 @@
       position: fixed;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background-color: rgba(0, 0, 0, 0.75);
+      background-color: rgba(0, 0, 0, 0);
       z-index: -1;
       pointer-events: none;
     }
@@ -148,14 +148,14 @@
   </header>
 
   <div class="content">
-    <h1>Physics Work</h1>
+    <h1>Published works</h1>
 
     <ul>
-      <li><a class="pub-link" href="https://arxiv.org/abs/2209.05087" target="_blank">📄 arXiv:2209.05087</a></li>
-      <li><a class="pub-link" href="https://arxiv.org/abs/2411.18370" target="_blank">📄 arXiv:2411.18370</a></li>
-      <li><a class="pub-link" href="https://arxiv.org/abs/2507.07816" target="_blank">📄 arXiv:2507.07816</a></li>
-      <li><a class="pub-link" href="https://dspace.uib.es/xmlui/handle/11201/159953" target="_blank">🎓 Undergraduate Thesis</a></li>
-      <li><a class="pub-link" href="https://dspace.uib.es/xmlui/handle/11201/166272" target="_blank">🎓 Master's Thesis</a></li>
+      <li><a class="pub-link" href="https://arxiv.org/abs/2209.05087" target="_blank">Automatic detection technique for solar filament oscillations in GONG data</a></li>
+      <li><a class="pub-link" href="https://arxiv.org/abs/2411.18370" target="_blank">One-stop strategy to search for long-duration gravitational-wave signals</a></li>
+      <li><a class="pub-link" href="https://arxiv.org/abs/2507.07816" target="_blank">GPU-Accelerated Searches for Long-Transient Gravitational Waves from Newborn Neutron Stars</a></li>
+      <li><a class="pub-link" href="https://dspace.uib.es/xmlui/handle/11201/159953" target="_blank">Characterization of the Adaptive Transient Hough method for searches of long-transient gravitational waves from binary neutron star fusion remnants</a></li>
+      <li><a class="pub-link" href="https://dspace.uib.es/xmlui/handle/11201/166272" target="_blank">GPU-accelerated searches for long-duration transient gravitational waves from newborn neutron stars</a></li>
     </ul>
   </div>
 
