--- a/index.html
+++ b/index.html
@@ -116,6 +116,47 @@
     .socials a:hover {
       color: #f39c12;
     }
+
+    @media (max-width: 768px) {
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 20px;
+      }
+
+      nav {
+        flex-direction: column;
+        gap: 1rem;
+        font-size: 1.1rem;
+        margin-top: 1rem;
+      }
+
+      .content {
+        margin: 140px 1rem 60px;
+        padding: 1rem;
+        font-size: 1.1rem;
+      }
+
+      h1 {
+        font-size: 2rem;
+        text-align: left;
+      }
+
+      .branding .name {
+        font-size: 1.6rem;
+      }
+
+      .branding .subtitle {
+        font-size: 1rem;
+      }
+
+      .socials {
+        position: static;
+        margin-top: 2rem;
+        justify-content: center;
+        transform: none;
+      }
+    }
   </style>
 </head>
 <body>
