Adds active indications to index and about

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       <div class="subtitle">Personal Website</div>
     </div>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="index.html" class="active">Home</a>
       <a href="about.html">About</a>
       <a href="#">Photography</a>
       <a href="physics.html">Physics</a>
