--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
     </div>
     <nav>
       <a href="index.html">Home</a>
-      <a href="about.html">About</a>
+      <a href="about.html" class="active">About</a>
       <a href="#">Photography</a>
       <a href="physics.html">Physics</a>
       <a href="#">Curriculum</a>
