Remove about and put the text in index

--- a/index.html
+++ b/index.html
@@ -168,9 +168,7 @@
     </div>
     <nav>
       <a href="index.html" class="active">Home</a>
-      <a href="about.html">About</a>
       <a href="#">Photography</a>
-      <a href="physics.html">Physics</a>
       <a href="#">Curriculum</a>
     </nav>
   </header>
@@ -179,10 +177,9 @@
     <h1>Welcome to Joan-René Mérou's Personal Website</h1>
     <div class="about">
       <p>
-        Thanks for visiting my website! In here I am collecting cool things to
-        show to other people, such as my work in physics or my hobbies. Feel
-        free to send an email to joanrenemerou@gmail.com for anything you are
-        interested in.
+        I am a third-year PhD student in physics working on continuous gravitational waves and detector characterization. This website is a place to collect and share my work, hobbies, and interests. Feel free to connect via email or through the social links.
+
+        Thanks for visiting my website! Feel free to send an email to joanrenemerou@gmail.com for anything you are interested in.
       </p>
     </div>
   </div>
