--- a/curriculum.html
+++ b/curriculum.html
@@ -140,10 +140,8 @@
     </div>
     <nav>
       <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="physics.html" class="active">Physics</a>
+      <a href="curriculum.html" class="active">Curriculum</a>
       <a href="#">Photography</a>
-      <a href="#">Curriculum</a>
     </nav>
   </header>
 
