Change font back to sans serif and increase font size

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 
     body, html {
       height: 100%;
-      font-family: 'Times New Roman', Times, serif;
+      font-family: 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
       color: white;
       background: url('https://i.imgur.com/BDDn2AE.jpeg') no-repeat center center fixed;
       background-size: cover;
       position: relative;
+      font-size: 1.125rem;
     }
 
     body::before {
@@ -43,24 +44,24 @@
       display: flex;
       flex-direction: column;
       font-weight: 400;
-      font-size: 1.2rem;
+      font-size: 1.4rem;
     }
 
     .branding .name {
-      font-size: 1.8rem;
+      font-size: 2rem;
       font-weight: 700;
     }
 
     .branding .subtitle {
       font-style: italic;
-      font-size: 1.1rem;
+      font-size: 1.2rem;
     }
 
     nav {
       display: flex;
       gap: 2rem;
       font-weight: 700;
-      font-size: 1.3rem;
+      font-size: 1.4rem;
     }
 
     nav a {
@@ -86,14 +87,14 @@
     }
 
     h1 {
-      font-size: 3.4rem;
+      font-size: 3.8rem;
       margin-bottom: 2rem;
     }
 
     .about {
-      max-width: 800px;
-      font-size: 1.4rem;
-      line-height: 1.8;
+      max-width: 1800px;
+      font-size: 1.5rem;
+      line-height: 1.5;
     }
 
     .socials {
@@ -109,7 +110,7 @@
 
     .socials a {
       color: white;
-      font-size: 1.8rem;
+      font-size: 2rem;
       text-decoration: none;
     }
 
@@ -168,7 +169,7 @@
     </div>
     <nav>
       <a href="index.html" class="active">Home</a>
-      <a href="#">Curriculum</a>
+      <a href="curriculum.html">Curriculum</a>
       <a href="#">Photography</a>
     </nav>
   </header>
