Ads photography page

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     }
 
     .about {
-      max-width: 1800px;
+      max-width: 1600px;
       font-size: 1.5rem;
       line-height: 1.5;
     }
@@ -170,7 +170,7 @@
     <nav>
       <a href="index.html" class="active">Home</a>
       <a href="curriculum.html">Curriculum</a>
-      <a href="#">Photography</a>
+      <a href="photography.html">Photography</a>
     </nav>
   </header>
 
