--- a/curriculum.html
+++ b/curriculum.html
@@ -141,7 +141,7 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="curriculum.html" class="active">Curriculum</a>
-      <a href="#">Photography</a>
+      <a href="photography.html">Photography</a>
     </nav>
   </header>
 
