--- a/catazon.html
+++ b/catazon.html
@@ -143,4 +143,12 @@
     <div class="buy-box">
       <div class="price">Only: One hug 🤗</div>
       <button class="buy-button">Give Hug & Adopt Now</button>
-    </
+    </div>
+  </div>
+
+  <footer>
+    © 2025 Catmazon, Inc. Meow rights reserved.
+  </footer>
+
+</body>
+</html>
