--- a/catazon.html
+++ b/catazon.html
@@ -123,13 +123,13 @@
     </div>
 
     <div class="product-details">
-      <h2 class="product-title">Premium Cat in a Box</h2>
+      <h2 class="product-title">Galileo en caja</h2>
       <div class="rating">
         ★★★★★ 4.9/5 (27,324 reviews)
       </div>
       <div class="price">Price: A hug</div>
       <div class="description">
-        Meet the revolutionary feline storage solution: the Cat in a Box™. This purring unit comes fully assembled, self-heated, and intermittently responsive.
+        Compre aquí su Galileo en paquete. Incluye Galileo e incluye caja, la mejor oferta.
         <ul>
           <li>Automatic purring feature</li>
           <li>Eco-friendly cardboard packaging</li>
@@ -141,8 +141,8 @@
     </div>
 
     <div class="buy-box">
-      <div class="price">Only: One hug 🤗</div>
-      <button class="buy-button">Give Hug & Adopt Now</button>
+      <div class="price">Precio: Un abrazo!</div>
+      <button class="buy-button">Compra ahora</button>
     </div>
   </div>
 
